syntax = "proto3";

option go_package = "user.v1";
package user.v1;

service UserService {
  rpc PasswordLogin (PasswordLoginRequest) returns (PasswordLoginResponse) {}
  rpc UserCreate (UserCreateRequest) returns (UserCreateResponse) {}
}

message PasswordLoginRequest {
  string email = 1;
  string password = 2;
}

message PasswordLoginResponse {
  string email = 1;
  string user_id = 2;
  bool admin = 3;
}

message UserCreateRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
  bool admin = 5;
}

message UserCreateResponse {
  string email = 1;
  string user_id = 2;
  bool admin = 3;
}